[tool.poetry]
name = "tether-web-api"
version = "0.1.0"
description = ""
authors = ["ayumiohno <ayumi0130ohno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
autopep8 = "^2.0.4"
bcrypt = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
